# claude-autonomous-agents

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
assets/: architecture.json
src/claude_agents/: __init__.py  cli.py  config.py
src/claude_agents/core/: __init__.py  agent.py  claude_client.py  memory.py  tools.py
src/claude_agents/loops/: __init__.py  memory_agent.py  orchestrator.py  plan_execute.py  react.py  reflexion.py
tests/: test_memory.py  test_react_loop.py  test_tools.py
